--- a/ZenithCulinary/index.html
+++ b/ZenithCulinary/index.html
@@ -215,7 +215,7 @@
                 </div>
                 <div class="inputBox">
                     <i class="fas fa-phone"></i>
-                    <input type="tel" id="phone"  placeholder="Phone Number (10 digits)" />
+                    <input type="tel" id="phone"  placeholder="Phone Number (55x --- -- --)" />
                 </div>
                 <button type="button" id="contactButton" class="generally-button">Contact Now</button>
             </form>
