admin veri tabanınae gönderilen verileri görsün diye admin.html dosyası eklendi. pay.html dosyası daha düzenli hale getirildi.

--- a/ZenithCulinary/pay.html
+++ b/ZenithCulinary/pay.html
@@ -2,146 +2,8 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="zenith.css"/>
+<link rel="stylesheet" href="pay.css"/>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-  body {
-    font-family: Arial, sans-serif;
-    font-size: 16px;
-  }
-
-  .container {
-    padding: 10px;
-    background-color: #F5F5DC;
-  }
-
-  input[type=text], input[type=submit] {
-    width: 100%;
-    padding: 12px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #f6f6f6;
-    border-radius: 20px;
-    box-sizing: border-box;
-  }
-
-  input[type=submit] {
-    background-color: #4CAF50;
-    color: #f6f6f6;
-    cursor: pointer;
-  }
-
-  input[type=submit]:hover {
-    background-color: #45a049;
-  }
-
-  .row {
-    display: flex;
-    flex-wrap: wrap;
-  }
-
-  .col-75, .col-50 {
-    flex: 75%;
-    padding: 0 40px;
-  }
-
-  .col-50 {
-    flex: 50%;
-  }
-
-  .icon-container {
-    margin-bottom: 50px;
-  }
-
-  .icon-container i {
-    margin-right: 10px;
-    font-size: 50px;
-  }
-
-  label {
-    margin-bottom: 5px;
-    display: block;
-  }
-
-  .btn {
-    padding: 12px;
-    background-color: #4CAF50;
-    color: #f6f6f6;
-    border: none;
-    cursor: pointer;
-    width: 100%;
-    border-radius: 4px;
-    text-align: center;
-  }
-
-  .btn:hover {
-    background-color: #45a049;
-  }
-
-  .flex-row {
-    display: flex;
-    justify-content: space-between;
-  }
-
-  .flex-row .col-50 {
-    flex: 48%;
-  }
-
-  @media (max-width: 100px) {
-    .row, .flex-row {
-      flex-direction: column;
-    }
-  }
-  /* .footer {
-    background-color: #333;
-    color: #f6f6f6;
-    padding: 20px 0;
-    text-align: center;
-    width: 100%;
-    border-top-left-radius: 50px;
-    border-top-right-radius: 50px;
-    position: relative;
-    bottom: 0;
-}
-
-.footer .share a {
-    color: #f6f6f6;
-    margin: 0 15px;
-    font-size: 24px;
-    transition: color 0.3s;
-}
-
-.footer .share a:hover {
-    color: #4CAF50;
-}
-
-.footer .credit {
-    margin-top: 10px;
-    font-size: 14px;
-}
-
-.footer .credit span {
-    color: #4CAF50;
-}
-
-.footer .container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-}
-
-.footer .share {
-    flex: 1;
-    text-align: center;
-}
-
-.footer .credit {
-    flex: 1;
-    text-align: center;
-} */
-
-</style>
 </head>
 <body>
 
