server.js dosyası daha düzenli hale getirildi, admin için sipariş onay butonları eklendi, ve database'e kaydedildi.

--- a/ZenithCulinary/admin.html
+++ b/ZenithCulinary/admin.html
@@ -27,6 +27,7 @@
                     <th>CVV</th>
                     <th>Items</th>
                     <th>Total Amount</th>
+                    <th>Action</th>
                 </tr>
             </thead>
             <tbody id="payments-body">
