--- a/ZenithCulinary/admin.html
+++ b/ZenithCulinary/admin.html
@@ -35,6 +35,22 @@
             </tbody>
         </table>
     </section>
+
+    <section class="contacts">
+    <h2>Contact Information</h2>
+        <table id="contactsTable">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Email</th>
+                    <th>Phone</th>
+                </tr>
+            </thead>
+            <tbody id="contactsTableBody">
+                <!-- Contacts data will be inserted here -->
+            </tbody>
+        </table>
+    </section>
 </div>
 
 <footer class="footer">
