gereksiz ve yanlış js satırları kaldırıldı. Admin panel sayfasında gözüken kart bilgileri yeniden dizayn edildi. Kart bilgilerinde yer alan ay/yıl kısmı düzenlendi. Geçmiş zaman bilgileri kabul olmayacak hale getirildi.

--- a/ZenithCulinary/admin.html
+++ b/ZenithCulinary/admin.html
@@ -20,13 +20,8 @@
                 <tr>
                     <th>Name</th>
                     <th>Address</th>
-                    <th>Card Name</th>
-                    <th>Card Number</th>
-                    <th>Expiry Month</th>
-                    <th>Expiry Year</th>
-                    <th>CVV</th>
                     <th>Items</th>
-                    <th>Total Amount</th>
+                    <th>Total Amount ($)</th>
                     <th>Action</th>
                 </tr>
             </thead>
